Change the way to apply the right height on the calendar container, to avoid displaying a useless scrollbar when adding the DOCTYPE declaration.

--- a/css/bootstrap-year-calendar.css
+++ b/css/bootstrap-year-calendar.css
@@ -23,15 +23,20 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  overflow: auto;
   direction: ltr;
-  
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.calendar:after {
+	/* Apply the right height on the calendar div, even if the months elements are floating  */
+	clear: both;
+	content: "";
+	display:block;
 }
 
 .calendar.calendar-rtl {
